test/main/com/ocaml/sdk/output/errors/samples/mismatch/missing_impl/file.ml
(*
File "file.ml", line 1:
Error: The implementation file.ml does not match the interface file.cmi:
       The module `Make' is required but not provided
       File "file.mli", line 7, characters 0-62: Expected declaration
       The module type `Something' is required but not provided
       File "file.mli", line 1, characters 0-83: Expected declaration
*)